--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 layout: post-index
 title: Latest Posts
 description: "Describe this nonsense."
-tags: [Jekyll, theme, themes, responsive, blog, modern]
+tags: [Aldo, Ziflaj, aziflaj, blog, things, lab, thingslab]
 comments: false
-image:
-  feature: abstract-1.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
 ---
 
 {% for post in paginator.posts %}
