added vagrant logo

--- a/real-world-webapp/index.html
+++ b/real-world-webapp/index.html
@@ -301,6 +301,9 @@ foreach ($resultSet as $result) // this should print Goku!
 						<p class="fragment">Code that Works!</p>
 					</section>
 					
+					<section>
+						<img width="480" data-src="../images/real-world-webapp-presentation/vagrant-logo.png">
+					</section>
 						
 					<section>
 						<h2>Configs made simpler</h2>
