--- a/real-world-webapp/index.html
+++ b/real-world-webapp/index.html
@@ -370,7 +370,7 @@ foreach ($resultSet as $result) // this should print Goku!
 					<section>
 						<h2>Rapid Application Prototyping (RAD)</h2>
 						<p class="fragment">Creating small, uncomplete prototypes</p>
-						<p class="fragment">Brakes the whole project in smaller mini-projects</p>
+						<p class="fragment">Breaks the whole project in smaller mini-projects</p>
 						<p class="fragment">User involved in the development process</p>
 					</section>
 					
