css frameworks were not all frameworks: fixed

--- a/real-world-webapp/index.html
+++ b/real-world-webapp/index.html
@@ -121,13 +121,13 @@ foreach ($resultSet as $result) // this should print Goku!
 					</section>
 					
 					<section>
-						<h2>CSS frameworks</h2>
+						<h2>CSS helpers</h2>
 						<ul>
 							<li><a href="http://foundation.zurb.com/" target="_blank" class="url">Foundation</a></li>
 							<li><a href="http://getbootstrap.com/" target="_blank" class="url">Bootstrap</a></li>
-							<li><a href="http://html5up.net/" target="_blank" class="url">HTML5 UP</a></li>
-							<li><a href="https://html5boilerplate.com/" target="_blank" class="url">HTML5 Boilerplate</a></li>
 							<li><a href="http://getskeleton.com/" target="_blank" class="url">Skeleton</a></li>
+							<li><a href="http://html5up.net/" target="_blank" class="url">HTML5 UP</a> (a lot of themes)</li>
+							<li><a href="https://html5boilerplate.com/" target="_blank" class="url">HTML5 Boilerplate</a> (front-end template)</li>
 						</ul>
 					</section>
 					
