fixes for the git slides

--- a/real-world-webapp/index.html
+++ b/real-world-webapp/index.html
@@ -328,19 +328,18 @@ foreach ($resultSet as $result) // this should print Goku!
 					<section>
 						<h2>Version control</h2>
 						<blockquote cite="http://git-scm.com/book/en/v2/Getting-Started-About-Version-Control">
-							Version control is a system that records changes to a file or set of files over time so that you can recall specific versions later. For the examples in this book you will use software source code as the files being version controlled, though in reality you can do this with nearly any type of file on a computer.
+							Version control is a system that records changes to a file or set of files over time so that you can recall specific versions later. [During development] you will use software source code as the files being version controlled, though in reality you can do this with nearly any type of file on a computer.
 						</blockquote>
 					</section>
 
 
 					<section>
-						<h2>Our choice: <span style="text-transform: lowercase;">git</span></h2> <!---->
-						<!-- <h2>Our choice: <object type="image/svg+xml" data="git.svg" id="git-logo">Your browser does not support SVG</object></h2> <!---->
-						<p class="fragment">Git is Fast</p>
-						<p class="fragment">Git is Small</p>
-						<p class="fragment">Git is Distributed</p>
-						<p class="fragment">Git is Easy to learn</p>
-						<p class="fragment">Git is The new standard</p>
+						<h2>Our choice: <span style="text-transform: lowercase;">git</span></h2>
+						<p class="fragment">Git is <strong>Fast</strong></p>
+						<p class="fragment">Git is <strong>Small</strong></p>
+						<p class="fragment">Git is <strong>Distributed</strong></p>
+						<p class="fragment">Git is <strong>Easy to learn</strong></p>
+						<p class="fragment">Git is <strong>The new standard</strong></p>
 					</section>
 					
 					<section>
