cleaned + fixed 404 of 89465325986451

--- a/tl-website-89465325986451/404/index.html
+++ b/tl-website-89465325986451/404/index.html
@@ -15,8 +15,8 @@
 </div>
 
 
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="bower_components/theaterjs/build/theater.min.js"></script>
+<script src="../bower_components/jquery/dist/jquery.min.js"></script>
+<script src="../bower_components/theaterjs/build/theater.min.js"></script>
 <script>
 
     var theater = new TheaterJS();
