--- a/oshilografi-elektromekanik/index.html
+++ b/oshilografi-elektromekanik/index.html
@@ -103,7 +103,7 @@
 				<section>
 					<section>
 						<h2>Sistemi optik</h2>
-						<img src="../images/oshilografi-elektromekanik/sistemi-optik.png">
+						<img src="../images/oshilografi-elektromekanik/sistemi-optik.PNG">
 					</section>
 				</section>
 
