--- a/tl-website-materialized-demo/index.html
+++ b/tl-website-materialized-demo/index.html
@@ -125,6 +125,20 @@
                 </ul>
             </div>
         </div>
+
+        <div class="row">
+            <form class="col s12 m12">
+                <div class="input-field col s12 m6">
+                    <input id="email" type="email" class="validate">
+                    <label for="email">Email</label>
+                </div>
+                <div class="input-field col s12 m6">
+                    <button type="submit" class="waves-effect waves-light btn">
+                        <i class="mdi-communication-email left"></i>subscribe
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
     <div class="footer-copyright">
         <div class="container">
