--- a/tl-website-demo/index.html
+++ b/tl-website-demo/index.html
@@ -61,7 +61,8 @@
             <p class="motto__learn-descr">If you want to make something new or hack something existent, you are in the right place. Nobody is born genius, so first, you get to learn how to do stuff. Here we don’t learn in the conventional way... Instead, you can participate in brief and catchy presentations, interactive discussions and debates, live workshops and profit from peer-to-peer support. At the end, you will know how to proceed with making your idea a reality, but also learn how to teach.</p>
         </div>
         <div class="right col m4 learn-icon">
-            <i class="fa fa-book fa-4x"></i>
+            <!-- <i class="fa fa-book fa-4x"></i> -->
+            <img src="assets/img/1430145924_book_stack.png">
         </div>
     </section>
 
@@ -71,7 +72,8 @@
             <p class="motto__make-descr">Learned some new stuff? Now it’s time to put it into practice and make some real Things. Short after base concepts are explained by workshops or presentations, we can start immediately to try and make Things together. If you are stuck somewhere between wires or code, you can get help in an instant. If you have some experience, your help to others is always needed.</p>
         </div>
         <div class="left col m4 make-icon">
-            <i class="fa fa-cogs fa-4x"></i>
+            <!-- <i class="fa fa-cogs fa-4x"></i> -->
+            <img src="assets/img/1430145990_1-08-128.png">
         </div>
     </section>
 
@@ -81,7 +83,8 @@
             <p class="motto__share-descr">Let your friends know what cool and crazy Things you’ve made here. You can use our social media accounts to share your work, get support and feedback, as well as have more friends to join and profit from the Lab's activities. Sharing knowledge is not like sharing pizza. Instead, you enter with your whole pizza and everyone comes out with an even bigger pizza. So let’s share pizza... um, knowledge!</p>
         </div>
         <div class="right col m4 share-icon">
-            <i class="fa fa-share fa-4x"></i>
+            <!-- <i class="fa fa-share fa-4x"></i> -->
+            <img src="assets/img/1430146057_icon-share-128.png">
         </div>
     </section>
 </section>
@@ -111,17 +114,17 @@
 <footer class="page-footer blue-grey darken-3">
     <div class="container">
         <div class="row">
-            <div class="col l6 s12">
+            <div class="col l6 s12 m6">
                 <h5 class="white-text">Things Lab</h5>
                 <p class="grey-text text-lighten-4">We seek to build an active community of developers and technicians by encouraging practical learning by building useful products, which can be shared with everyone.</p>
             </div>
-            <div class="col l4 offset-l2 s12">
+            <div class="col l4 offset-l2 s12 m6 social-footer-container">
                 <h5 class="white-text">Connect</h5>
-                <ul>
-                    <li><a class="grey-text text-lighten-3" href="#"><i class="social-icon left ion-social-github"></i>Github</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#"><i class="social-icon left ion-social-twitter"></i>Twitter</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#"><i class="social-icon left ion-social-facebook"></i>Facebook</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#"><i class="social-icon left ion-social-googleplus"></i>Google+</a></li>
+                <ul class="social-footer">
+                    <li><a class="grey-text text-lighten-3" href="#"><i class="social-icon left ion-social-github"></i><span>Github</span></a></li>
+                    <li><a class="grey-text text-lighten-3" href="#"><i class="social-icon left ion-social-twitter"></i><span>Twitter</span></a></li>
+                    <li><a class="grey-text text-lighten-3" href="#"><i class="social-icon left ion-social-facebook"></i><span>Facebook</span></a></li>
+                    <li><a class="grey-text text-lighten-3" href="#"><i class="social-icon left ion-social-googleplus"></i><span>Google+</span></a></li>
                 </ul>
             </div>
         </div>
