--- a/tl-website-demo/index.html
+++ b/tl-website-demo/index.html
@@ -6,7 +6,6 @@
     <title>Things Lab</title>
 
     <link rel="stylesheet" href="bower_components/materialize/dist/css/materialize.min.css">
-    <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
 
@@ -45,7 +44,7 @@
     <section class="thingslab center-align">
         <h1 class="thingslab__title">Things Lab</h1>
         <div class="thingslab__motto">Learn | Make | Share</div>
-        <p class="thingslab__description flow-text">
+        <p class="thingslab__description">
             We seek to build an active community of developers and technicians by encouraging <strong>practical learning</strong> by building useful products, which can be shared with everyone.
         </p>
         <a data-scroll href="#motto" class="hide-on-small-only down">
@@ -60,8 +59,7 @@
             <h1 class="motto__learn-title">Learn</h1>
             <p class="motto__learn-descr">If you want to make something new or hack something existent, you are in the right place. Nobody is born genius, so first, you get to learn how to do stuff. Here we don’t learn in the conventional way... Instead, you can participate in brief and catchy presentations, interactive discussions and debates, live workshops and profit from peer-to-peer support. At the end, you will know how to proceed with making your idea a reality, but also learn how to teach.</p>
         </div>
-        <div class="right col m4 learn-icon">
-            <!-- <i class="fa fa-book fa-4x"></i> -->
+        <div class="right col m4 learn-icon hide-on-small-only">
             <img src="assets/img/1430145924_book_stack.png">
         </div>
     </section>
@@ -71,8 +69,7 @@
             <h1 class="motto__make-title">Make</h1>
             <p class="motto__make-descr">Learned some new stuff? Now it’s time to put it into practice and make some real Things. Short after base concepts are explained by workshops or presentations, we can start immediately to try and make Things together. If you are stuck somewhere between wires or code, you can get help in an instant. If you have some experience, your help to others is always needed.</p>
         </div>
-        <div class="left col m4 make-icon">
-            <!-- <i class="fa fa-cogs fa-4x"></i> -->
+        <div class="left col m4 make-icon hide-on-small-only">
             <img src="assets/img/1430145990_1-08-128.png">
         </div>
     </section>
@@ -82,20 +79,18 @@
             <h1 class="motto__share-title">Share</h1>
             <p class="motto__share-descr">Let your friends know what cool and crazy Things you’ve made here. You can use our social media accounts to share your work, get support and feedback, as well as have more friends to join and profit from the Lab's activities. Sharing knowledge is not like sharing pizza. Instead, you enter with your whole pizza and everyone comes out with an even bigger pizza. So let’s share pizza... um, knowledge!</p>
         </div>
-        <div class="right col m4 share-icon">
-            <!-- <i class="fa fa-share fa-4x"></i> -->
+        <div class="right col m4 share-icon hide-on-small-only">
             <img src="assets/img/1430146057_icon-share-128.png">
         </div>
     </section>
 </section>
 
-<!---->
 <section class="testimonials">
     <h1>What they say about us</h1>
 
-    <div id="carousel-testimonials" class="carousel slide">
-        <ul class="carousel-inner slides">
-            <li class="item testimonial active">
+    <div id="carousel-testimonials">
+        <ul class="slides">
+            <li class="item testimonial">
                 <q class="quote">The best place to Learn</q>
                 <h3 class="name">- Foo Bar</h3>
             </li>
