--- a/tl-website-demo/index.html
+++ b/tl-website-demo/index.html
@@ -7,12 +7,14 @@
 
     <link rel="stylesheet" href="bower_components/materialize/dist/css/materialize.min.css">
     <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="libs/elegant-font/style.css">
     <link rel="stylesheet" href="assets/css/main.css">
 
     <!-- include these for less than IE 9 legacy browsers -->
     <!--[if lt IE 9]>
     <script src="bower_components/html5shiv/dist/html5shiv.min.js"></script>
     <script src="bower_components/respond/dest/respond.min.js"></script>
+    <script src="libs/elegant-font/lte-ie7.js"></script>
     <![endif]-->
 
 </head>
@@ -54,33 +56,39 @@
 </section>
 
 <section id="motto" class="motto-explained">
-    <section class="motto__learn row">
-        <div class="left col m8">
-            <h1 class="motto__learn-title">Learn</h1>
-            <p class="motto__learn-descr">If you want to make something new or hack something existent, you are in the right place. Nobody is born genius, so first, you get to learn how to do stuff. Here we don’t learn in the conventional way... Instead, you can participate in brief and catchy presentations, interactive discussions and debates, live workshops and profit from peer-to-peer support. At the end, you will know how to proceed with making your idea a reality, but also learn how to teach.</p>
+    <section class="motto__learn row valign-wrapper">
+        <div class="left col s12 m8">
+            <h2 class="motto__learn-title">Learn</h2>
+            <p class="motto__learn-descr">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
         </div>
-        <div class="right col m4 learn-icon hide-on-small-only">
-            <img src="assets/img/1430145924_book_stack.png">
-        </div>
-    </section>
-
-    <section class="motto__make row">
-        <div class="right col m8">
-            <h1 class="motto__make-title">Make</h1>
-            <p class="motto__make-descr">Learned some new stuff? Now it’s time to put it into practice and make some real Things. Short after base concepts are explained by workshops or presentations, we can start immediately to try and make Things together. If you are stuck somewhere between wires or code, you can get help in an instant. If you have some experience, your help to others is always needed.</p>
-        </div>
-        <div class="left col m4 make-icon hide-on-small-only">
-            <img src="assets/img/1430145990_1-08-128.png">
+        <div class="right col m4 learn-icon hide-on-small-only valign">
+            <i class="icon_book_alt"></i>
+            <!-- &#xe022;
+             <img src="assets/img/1430145924_book_stack.png"> -->
         </div>
     </section>
 
-    <section class="motto__share row">
-        <div class="left col m8">
-            <h1 class="motto__share-title">Share</h1>
-            <p class="motto__share-descr">Let your friends know what cool and crazy Things you’ve made here. You can use our social media accounts to share your work, get support and feedback, as well as have more friends to join and profit from the Lab's activities. Sharing knowledge is not like sharing pizza. Instead, you enter with your whole pizza and everyone comes out with an even bigger pizza. So let’s share pizza... um, knowledge!</p>
+    <section class="motto__make row valign-wrapper">
+        <div class="left col m4 make-icon hide-on-small-only valign">
+            <i class="icon_tools"></i>
+            <!-- &#xe035;
+            <img src="assets/img/1430145990_1-08-128.png"> -->
         </div>
-        <div class="right col m4 share-icon hide-on-small-only">
-            <img src="assets/img/1430146057_icon-share-128.png">
+        <div class="right col s12 m8">
+            <h2 class="motto__make-title">Make</h2>
+            <p class="motto__make-descr">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+        </div>
+    </section>
+
+    <section class="motto__share row valign-wrapper">
+        <div class="left col s12 m8">
+            <h2 class="motto__share-title">Share</h2>
+            <p class="motto__share-descr">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+        </div>
+        <div class="right col m4 share-icon hide-on-small-only valign">
+            <i class="icon_globe"></i>
+            <!-- &#xe0e2;
+            <img src="assets/img/1430146057_icon-share-128.png"> -->
         </div>
     </section>
 </section>
