all presentations in a single folder

--- a/presentations/oshilografi-elektromekanik/index.html
+++ b/presentations/oshilografi-elektromekanik/index.html
@@ -14,11 +14,11 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-		<link rel="stylesheet" href="../assets/reveal/css/reveal.css">
-		<link rel="stylesheet" href="../assets/reveal/css/theme/black.css" id="theme">
+		<link rel="stylesheet" href="../../assets/reveal/css/reveal.css">
+		<link rel="stylesheet" href="../../assets/reveal/css/theme/black.css" id="theme">
 
 		<!-- Code syntax highlighting -->
-		<link rel="stylesheet" href="../assets/reveal/lib/css/zenburn.css">
+		<link rel="stylesheet" href="../../assets/reveal/lib/css/zenburn.css">
 		<link rel="stylesheet" href="style.css">
 
 		<!-- Printing and PDF exports -->
@@ -26,12 +26,12 @@
 			var link = document.createElement( 'link' );
 			link.rel = 'stylesheet';
 			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? '../assets/reveal/css/print/pdf.css' : '../assets/reveal/css/print/paper.css';
+			link.href = window.location.search.match( /print-pdf/gi ) ? '../../assets/reveal/css/print/pdf.css' : '../../assets/reveal/css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
 
 		<!--[if lt IE 9]>
-		<script src="../assets/reveal/lib/js/html5shiv.js"></script>
+		<script src="../../assets/reveal/lib/js/html5shiv.js"></script>
 		<![endif]-->
 	</head>
 
@@ -72,7 +72,7 @@
 
 					<section>
 						<h2>Vibratori</h2>
-						<img src="../images/oshilografi-elektromekanik/vibratori.png">
+						<img src="../../images/oshilografi-elektromekanik/vibratori.png">
 					</section>
 
 					<section>
@@ -103,7 +103,7 @@
 				<section>
 					<section>
 						<h2>Sistemi optik</h2>
-						<img src="../images/oshilografi-elektromekanik/sistemi-optik.PNG">
+						<img src="../../images/oshilografi-elektromekanik/sistemi-optik.PNG">
 					</section>
 				</section>
 
@@ -170,8 +170,8 @@
 
 		</div>
 
-		<script src="../assets/reveal/lib/js/head.min.js"></script>
-		<script src="../assets/reveal/js/reveal.js"></script>
+		<script src="../../assets/reveal/lib/js/head.min.js"></script>
+		<script src="../../assets/reveal/js/reveal.js"></script>
 		<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 		<script>
@@ -188,12 +188,12 @@
 
 				// Optional reveal.js plugins
 				dependencies: [
-					{ src: '../assets/reveal/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: '../assets/reveal/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: '../assets/reveal/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: '../assets/reveal/plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: '../assets/reveal/plugin/zoom-js/zoom.js', async: true },
-					{ src: '../assets/reveal/plugin/notes/notes.js', async: true }
+					{ src: '../../assets/reveal/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: '../../assets/reveal/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '../../assets/reveal/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '../../assets/reveal/plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: '../../assets/reveal/plugin/zoom-js/zoom.js', async: true },
+					{ src: '../../assets/reveal/plugin/notes/notes.js', async: true }
 				]
 			});
 
