--- a/presentations/oshilografi-elektromekanik/index.html
+++ b/presentations/oshilografi-elektromekanik/index.html
@@ -67,7 +67,7 @@
 					<section>
 						<h2>Vibratori</h2>
 						<p class="fragment">Mjet magnetoelektrik</p>
-						<p class="fragment">Sherben per matje te rrymes e tensionit</p>
+						<p class="fragment">Sherben per te rregjistruar ndryshimin e rrymes dhe tensionit</p>
 					</section>
 
 					<section>
@@ -104,6 +104,7 @@
 					<section>
 						<h2>Sistemi optik</h2>
 						<img src="../../images/oshilografi-elektromekanik/sistemi-optik.PNG">
+						<p>$$ 2\alpha = 2 N_{i}I_{m} $$</p>
 					</section>
 				</section>
 
