slide per pyetjet

--- a/presentations/oshilografi-elektromekanik/index.html
+++ b/presentations/oshilografi-elektromekanik/index.html
@@ -165,6 +165,10 @@
 				</section>
 
 				<section>
+					<h1>Pyetje?</h1>
+				</section>
+
+				<section>
 					<h1>Faleminderit per pjesemarrjen</h1>
 				</section>
 			</div>
