--- a/presentations/real-world-webapp/index.html
+++ b/presentations/real-world-webapp/index.html
@@ -193,7 +193,7 @@ foreach ($resultSet as $result) // this should print Goku!
 
 					<section>
 						<h2 style="text-transform: none;">An SQL database</h2>
-						<img width="750" data-src="../images/real-world-webapp-presentation/sql-db.gif">
+						<img width="750" data-src="../../images/real-world-webapp-presentation/sql-db.gif">
 					</section>
 
 					<section>
@@ -418,7 +418,7 @@ foreach ($resultSet as $result) // this should print Goku!
 					<section>
 						<h2>Continuous Integration</h2>
 						<!-- <img data-src="../../images/real-world-webapp-presentation/continuous-integration.png"> -->
-						<img width="690" data-src="../images/real-world-webapp-presentation/ci.jpg">
+						<img width="690" data-src="../../images/real-world-webapp-presentation/ci.jpg">
 					</section>
 
 					<section>
