--- a/presentations/intro-to-mean/index.html
+++ b/presentations/intro-to-mean/index.html
@@ -53,7 +53,7 @@
 
 				<section>
 					<h2 style="text-transform: none">Aldo Ziflaj</h2>
-					<h3 style="text-transform: none">Co-founder of Things Lab</h3>
+					<h3 style="text-transform: none">Co-founder of <a href="http://thingslab.cc/">Things Lab</a></h3>
 					<ul class="me-social">
 						<li><i class="fa fa-twitter"></i> <a href="https://twitter.com/aziflaj">@aziflaj</a></li>
 						<li><i class="fa fa-github"></i> <a href="https://github.com/aziflaj">aziflaj</a></li>
